# picontrol

./: client.c  client.cpp  impl.txt  platformio.ini  test_module_list.py  test_result.txt  test_robustness.py
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
include/: tusb_config_picontrol.h
src/: InterruptSerialPIO.cpp  InterruptSerialPIO.h  boardconfig.cpp  boardconfig.h  common.hpp  curve.cpp  curve.h  debug_printf.cpp  debug_printf.h  ipc.cpp  ipc.hpp  main.cpp  main1.cpp  mapping.cpp  mapping.h  module_config_manager.cpp  module_config_manager.h  module_mapping_config.h  module_task.cpp  pio_uart.pio.h  port.cpp  port.h  runtime_config.cpp  runtime_config.h  runtime_query.cpp  runtime_query.h  usb_device.cpp  usb_device.h
web/: app.js  index.html
webcontrol/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
webcontrol/src/: App.vue  types.ts  utils.ts
webcontrol/src-tauri/: Cargo.toml  tauri.conf.json
webcontrol/src-tauri/capabilities/: default.json
webcontrol/src-tauri/src/: main.rs
webcontrol/src/components/: CurveEditor.vue  Grid.vue  LogPanel.vue  MappingEditor.vue  MockPanel.vue  ParamPanel.vue  Toolbar.vue
webcontrol/src/composables/: useLogger.ts  useStore.ts
webcontrol/src/services/: mock.ts  protocol.ts  router.ts  serial.ts
webcontrol/src/services/__tests__/: protocol.test.ts  smoke.test.ts
