[package]
name = "picontrol-webcontrol"
version = "0.1.0"
description = "PiControl desktop app"
authors = ["PiControl"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serialport = "4"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
